# open-with-browser

./: README.md  TEST_SUMMARY.md
.github/workflows/: ci.yml  release.yml  tests.yml
apps/desktop/: .eslintrc.cjs  .prettierignore  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.css  App.tsx  Layout.tsx  OpenWithDialog.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: browser_details.rs  commands.rs  diagnostics.rs  lib.rs  link.rs  preferences.rs  routing.rs
apps/desktop/src-tauri/src/domain/: models.rs
apps/desktop/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
apps/desktop/src-tauri/tests/browser/: chrome_profiles.rs  firefox_profiles.rs  kind_parse.rs
apps/desktop/src-tauri/tests/diagnostics/: state.rs
apps/desktop/src-tauri/tests/link/: parsing.rs
apps/desktop/src-tauri/tests/routing/: utils.rs
apps/desktop/src/components/: Onboarding.tsx
apps/desktop/src/lib/: autostart.ts  diagnostics.ts  models.ts  preferences.ts  routing.ts  storage.ts
apps/desktop/src/pages/: Dashboard.tsx  Rules.tsx  Settings.tsx
apps/desktop/src/store/: appStore.ts  uiStore.ts
apps/desktop/src/tests/: Combobox.test.tsx  OpenWithDialog.test.tsx  Select.test.tsx
docs/: README.md  browser-discovery-overview.md  linux-browser-profiles.md  macos-browser-profiles.md  windows-browser-profiles.md
src-tauri/: Cargo.toml  TESTING.md
src-tauri/src/: browser_details.rs  main.rs
(+1 files in other folders)
